# codebotler

./: .gitignore  .gitmodules  CMakeLists.txt  DSL.txt  README.md  chatgpt_prompt.md  codebotler.py  codebotler_benchmark.py  codebotler_deploy.py  codebotler_ros2.py  codegen-old.ipynb  codegen_inference.ipynb  codegen_v2.ipynb  cp_lua.ipynb  environment.yml  evaluate_pass1.py  evaluated_test_comp.jsonl  fim.py  generate_with_embeddings.py  gpt_prompt.md  interface-server-chat.py  interface-server.py  interface.html  interface_server.py  learning_trainers.ipynb  learning_trainers_2.ipynb  openai_chat_completion.py  openai_completion.py  package.xml  pass_k.py  requirements.txt  roboeval.py  run_docker.sh  starcoder_prompt.md  starcoder_prompt.py  test_comp.jsonl  test_gen.py  test_loader.ipynb  train.py  train_lua.py  (+2 more)
benchmark/: README.md  benchmark.jsonl  benchmark_easy.jsonl  readme.md  rtl.py  simple_tracer.py  simulator.py
benchmark_generator/: completions.py  completions_gpt35turbo-0301.jsonl  problems.csv  test_comp.jsonl
code_generation/: completions.py  double_examples.txt  eval.json  generate_n.py  gpt_prompt.md  interface.html  openai_chat_completion_prefix.py  prompt_prefix.py  prompt_prefix_reorder.py  prompt_prefix_starcoder.py  prompt_suffix.py  starcoder.py  starcoder_prompt.py  tour_examples.txt  utilities.py
code_generator/: eval.json  (+6 more)
robot_interface/src/robot_actions_pkg/: CMakeLists.txt  package.xml
robot_interface/src/robot_actions_pkg/action/: Ask.action  Execute.action  GetAllRooms.action  GetCurrentLocation.action  GoTo.action  Place.action
(+174 files in other folders)
